--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "packages/*"
   ],
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13"
+  }
 }
